2007-10-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Add EAP-LEAP widget

	* src/wireless-security/wireless-security.h
	  src/wireless-security/wireless-security.c
		- (wireless_security_get_g_type): new function; return GType for
			WirelessSecurity objects
		- (wireless_security_ref, wireless_security_unref): add refcounting
			capability to WirelessSecurity objects
		- (wireless_security_destroy): remove; use refcounting instead
		- (wireless_security_init): centralize common WirelessSecurity init code

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/ws-wep-passphrase.c
		- Use common WirelessSecurity init code
		- Fix xml->glade_file typo in init method of some WirelessSecurity objects

	* src/wireless-security/eap-method.h
	  src/wireless-security/eap-method.c
		- (eap_method_get_g_type): new function; return GType for EAPMethod
			objects
		- (eap_method_ref, eap_method_unref): add refcounting capability to
			EAPMethod objects
		- (eap_method_destroy): remove; use refcounting instead
		- (eap_method_init): centralize common EAPMethod init code

	* src/wireless-security/ws-wpa-eap.c
		- Use common WirelessSecurity init code
		- (destroy): let the Authentication combo hold references to EAPMethods
			and destroy them when the combo's model gets destroyed
		- (validate, fill_connection, auth_combo_changed_cb): need to unref the
			EAPMethod after getting it from the list store
		- (add_to_size_group): be sure to ref the size group because it gets
			kept around; need to unref the EAPMethod after getting it from the
			list store
		- (auth_combo_init): add EAP-LEAP to the available authentication
			methods; unref the EAPMethod after the list store takes it; unref
			the Authentication list store after the combo box takes it
		- (ws_wpa_eap_new): Use common WirelessSecurity init code

	* src/wireless-security/eap-method-tls.c